; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/mvebu/extr_ap-cpu-clk.c_ap_cpu_clk_recalc_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/mvebu/extr_ap-cpu-clk.c_ap_cpu_clk_recalc_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.ap_cpu_clk = type { i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk_hw*, i64)* @ap_cpu_clk_recalc_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ap_cpu_clk_recalc_rate(%struct.clk_hw* %0, i64 %1) #0 {
  %3 = alloca %struct.clk_hw*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.ap_cpu_clk*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.clk_hw* %0, %struct.clk_hw** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load %struct.clk_hw*, %struct.clk_hw** %3, align 8
  %9 = call %struct.ap_cpu_clk* @to_ap_cpu_clk(%struct.clk_hw* %8)
  store %struct.ap_cpu_clk* %9, %struct.ap_cpu_clk** %5, align 8
  %10 = load %struct.ap_cpu_clk*, %struct.ap_cpu_clk** %5, align 8
  %11 = getelementptr inbounds %struct.ap_cpu_clk, %struct.ap_cpu_clk* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.ap_cpu_clk*, %struct.ap_cpu_clk** %5, align 8
  %16 = getelementptr inbounds %struct.ap_cpu_clk, %struct.ap_cpu_clk* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.ap_cpu_clk*, %struct.ap_cpu_clk** %5, align 8
  %19 = getelementptr inbounds %struct.ap_cpu_clk, %struct.ap_cpu_clk* %18, i32 0, i32 1
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = mul i32 %17, %22
  %24 = add i32 %14, %23
  store i32 %24, i32* %6, align 4
  %25 = load %struct.ap_cpu_clk*, %struct.ap_cpu_clk** %5, align 8
  %26 = getelementptr inbounds %struct.ap_cpu_clk, %struct.ap_cpu_clk* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @regmap_read(i32 %27, i32 %28, i32* %7)
  %30 = load %struct.ap_cpu_clk*, %struct.ap_cpu_clk** %5, align 8
  %31 = getelementptr inbounds %struct.ap_cpu_clk, %struct.ap_cpu_clk* %30, i32 0, i32 1
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* %7, align 4
  %36 = and i32 %35, %34
  store i32 %36, i32* %7, align 4
  %37 = load %struct.ap_cpu_clk*, %struct.ap_cpu_clk** %5, align 8
  %38 = getelementptr inbounds %struct.ap_cpu_clk, %struct.ap_cpu_clk* %37, i32 0, i32 1
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 3
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* %7, align 4
  %43 = ashr i32 %42, %41
  store i32 %43, i32* %7, align 4
  %44 = load i64, i64* %4, align 8
  %45 = load i32, i32* %7, align 4
  %46 = sext i32 %45 to i64
  %47 = udiv i64 %44, %46
  ret i64 %47
}

declare dso_local %struct.ap_cpu_clk* @to_ap_cpu_clk(%struct.clk_hw*) #1

declare dso_local i32 @regmap_read(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
